sfSandBoxCode/force-app/main/default/objects/Candidate__c/fields/Candidate_Rating__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Rating__c</fullName>
    <description>Candidate rating on a score of 1-5</description>
    <inlineHelpText>Candidate rating on a score of 1-5</inlineHelpText>
    <label>Candidate Rating</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>