sfSandBoxCode/force-app/main/default/objects/Candidate__c/fields/City_Town__c.field-meta.xml
<CustomField>
    <fullName>City_Town__c</fullName>
    <description>City/Town</description>
    <inlineHelpText>City/Town</inlineHelpText>
    <label>City/Town</label>
    <length>50</length>
    <type>Text</type>
</CustomField>