sfSandBoxCode/force-app/main/default/objects/Candidate__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <description>Country</description>
    <inlineHelpText>Country</inlineHelpText>
    <label>Country</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>