sfSandBoxCode/force-app/main/default/objects/Candidate__c/fields/Cover_Letter__c.field-meta.xml
<CustomField>
    <fullName>Cover_Letter__c</fullName>
    <label>Cover Letter</label>
    <type>Url</type>
</CustomField>