sfSandBoxCode/force-app/main/default/objects/Candidate__c/fields/Date_Available__c.field-meta.xml
<CustomField>
    <fullName>Date_Available__c</fullName>
    <description>Date Available</description>
    <inlineHelpText>Date Available</inlineHelpText>
    <label>Date Available</label>
    <required>true</required>
    <type>Date</type>
</CustomField>