sfSandBoxCode/force-app/main/default/objects/Candidate__c/fields/Date_of_Application__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Application__c</fullName>
    <label>Date of Application</label>
    <type>DateTime</type>
</CustomField>