sfSandBoxCode/force-app/main/default/objects/Candidate__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Email</description>
    <inlineHelpText>Email</inlineHelpText>
    <label>Email</label>
    <length>25</length>
    <required>true</required>
    <type>Text</type>
</CustomField>