sfSandBoxCode/force-app/main/default/objects/Candidate__c/fields/Employee_Id__c.field-meta.xml
<CustomField>
    <fullName>Employee_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Employee Record if the Candidate has been converted to an Employee</description>
    <inlineHelpText>Employee Record if the Candidate has been converted to an Employee</inlineHelpText>
    <label>Employee Id</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Candidates</relationshipLabel>
    <relationshipName>Candidates</relationshipName>
    <type>Lookup</type>
</CustomField>