sfSandBoxCode/force-app/main/default/objects/Candidate__c/fields/Highest_Education__c.field-meta.xml
<CustomField>
    <fullName>Highest_Education__c</fullName>
    <label>Highest Education</label>
    <length>60</length>
    <type>Text</type>
</CustomField>