sfSandBoxCode/force-app/main/default/objects/Candidate__c/fields/LinkedIn_Profile_URL__c.field-meta.xml
<CustomField>
    <fullName>LinkedIn_Profile_URL__c</fullName>
    <description>LinkedIn Profile URL</description>
    <inlineHelpText>LinkedIn Profile URL</inlineHelpText>
    <label>LinkedIn Profile URL</label>
    <type>Url</type>
</CustomField>