sfSandBoxCode/force-app/main/default/objects/Candidate__c/fields/Middle_Name__c.field-meta.xml
<CustomField>
    <fullName>Middle_Name__c</fullName>
    <label>Middle_Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>