sfSandBoxCode/force-app/main/default/objects/Candidate__c/fields/Postal_Zip__c.field-meta.xml
<CustomField>
    <fullName>Postal_Zip__c</fullName>
    <description>Postal/Zip</description>
    <inlineHelpText>Postal/Zip</inlineHelpText>
    <label>Postal/Zip</label>
    <length>25</length>
    <type>Text</type>
</CustomField>