sfSandBoxCode/force-app/main/default/objects/Candidate__c/fields/Recruitment_Requisition__c.field-meta.xml
<CustomField>
    <fullName>Recruitment_Requisition__c</fullName>
    <label>Recruitment Requisition</label>
    <referenceTo>Recruitment_Requisition__c</referenceTo>
    <relationshipLabel>Candidates</relationshipLabel>
    <relationshipName>Candidates</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>