sfSandBoxCode/force-app/main/default/objects/Candidate__c/fields/Requesting_Department__c.field-meta.xml
<CustomField>
    <fullName>Requesting_Department__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Requesting Department</label>
    <referenceTo>FFA_Config_Object__c</referenceTo>
    <relationshipLabel>Candidates</relationshipLabel>
    <relationshipName>Candidates</relationshipName>
    <type>Lookup</type>
</CustomField>