sfSandBoxCode/force-app/main/default/objects/Candidate__c/fields/Resume__c.field-meta.xml
<CustomField>
    <fullName>Resume__c</fullName>
    <description>Resume</description>
    <inlineHelpText>Resume</inlineHelpText>
    <label>Resume</label>
    <type>Url</type>
</CustomField>