sfSandBoxCode/force-app/main/default/objects/Candidate__c/fields/Status_For_All_Candidates__c.field-meta.xml
<CustomField>
    <fullName>Status_For_All_Candidates__c</fullName>
    <label>Status For All Candidates</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Shortlisted</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>