sfSandBoxCode/force-app/main/default/objects/Candidate__c/fields/Website_Blog_portfolio__c.field-meta.xml
<CustomField>
    <fullName>Website_Blog_portfolio__c</fullName>
    <description>Website/Blog/portfolio</description>
    <inlineHelpText>Website/Blog/portfolio</inlineHelpText>
    <label>Website/Blog/portfolio</label>
    <type>Url</type>
</CustomField>