sfSandBoxCode/force-app/main/default/objects/Candidate__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Candidate_Status__c</columns>
    <columns>Candidate_Rating__c</columns>
    <columns>Recruitment_Requisition__c</columns>
    <columns>Candidate_Star_Rating__c</columns>
    <columns>Requesting_Department__c</columns>
    <columns>Resume__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>